# Android-Scaling-algorithm-for-image

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kpa/image/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/kpa/image/: MainActivity.kt
app/src/main/java/com/kpa/image/utils/: ScalingAlgorithmType.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kpa/image/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
